--- a/src/index.html
+++ b/src/index.html
@@ -181,7 +181,7 @@
         <div data-aos="fade-down" class="team-bg">
           <div class="flx">
             <img src="/src/img/user2.svg" alt="" />
-            <h2>@frieda</h2>
+            <h2>@berrak</h2>
             <a href="" style="color: #2193fc">Data Analytics</a>
           </div>
           <div class="icons">
@@ -205,7 +205,7 @@
         <div data-aos="fade-left" class="team-bg">
           <div class="flx">
             <img src="/src/img/user3.svg" alt="" />
-            <h2>@sufle</h2>
+            <h2>@aleyna</h2>
             <a href="" style="color: #ff4bcd">UI Designer</a>
           </div>
           <div class="icons">
